added new font weight and changed css theme colours

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,10 +76,12 @@ h4,
 h5,
 h6 {
 	color: var(--primary);
+	text-wrap: balance;
 }
 
 p {
 	color: var(--primary);
+	text-wrap: balance;
 }
 
 .container {
