--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -7,8 +7,12 @@
 
 	&__head {
 		font-family: 'Titillium Web', sans-serif;
-		font-size: 3rem;
+		font-size: 2.5rem;
 		line-height: 1;
+
+		@include tablet {
+			font-size: 3rem;
+		}
 	}
 
 	&__body {
@@ -17,7 +21,7 @@
 		font-weight: $fw-300;
 
 		@include desktop-sm {
-			width: 60%;
+			width: 90%;
 		}
 	}
 }
