--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -97,7 +97,7 @@
 	border-radius: 2px;
 	margin: 6px auto;
 	transition: all 0.3s ease-in-out;
-	background-color: var(--navbar-color);
+	background-color: var(--primary);
 }
 
 @media only screen and (max-width: 720px) {
