--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -36,11 +36,12 @@
 }
 
 .nav-branding {
-	font-size: 1.8rem;
+	font-family: 'Titillium Web';
+	font-size: 2.5rem;
 	color: var(--primary);
 	letter-spacing: 0.1rem;
 	display: flex;
-	font-weight: 400;
+	font-weight: $fw-600;
 	align-items: center;
 	z-index: 999;
 }
