--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $desktop-breakpoint: 1280px;
 	--project-bg: rgba(255, 255, 255, 0);
 	--navbar-color: #eaeaea;
 	--icon-color: #455d7a;
+	--ico-bg: #d4d4d4;
 	--bubbles-light-color: #9db0ce;
 	--bubbles-dark-color: #455d7a;
 	--highlight-color: #8fd1c2;
@@ -34,7 +35,7 @@ $desktop-breakpoint: 1280px;
 	--primaryLightGreen: #8fd1c2;
 	--primaryLightBlue: #455d7a;
 	--bg-color: #334051;
-	--header-color: rgba(51, 64, 81);
+	--header-color: #1a2b3a;
 	--btn-color: #eaeaea;
 	--btn-text: rgba(51, 64, 81);
 	--btn-bg: #8fd1c2;
@@ -46,6 +47,7 @@ $desktop-breakpoint: 1280px;
 	--project-bg: rgba(255, 255, 255, 1);
 	--navbar-color: #ffffff;
 	--icon-color: #8fd1c2;
+	--ico-bg: color(display-p3 0.224 0.224 0.224);
 	--bubbles-light-color: #455d7a;
 	--bubbles-dark-color: #8fd1c2;
 	--highlight-color: #feffdf;
