--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -2,8 +2,7 @@
 @use '../../styles/variables' as *;
 
 .skills {
-	margin-top: 3rem;
-	margin-bottom: 5rem;
+	margin: 4rem 0;
 
 	@include tablet {
 		display: grid;
@@ -22,13 +21,11 @@
 		display: flex;
 		flex-direction: row;
 		align-items: flex-start;
-		gap: 2rem;
+		gap: 1rem;
 		border-bottom: solid 1px var(--primary);
 		padding-bottom: 2rem;
 
 		&:first-child {
-			margin-top: 3rem;
-
 			@include desktop-sm {
 				margin-top: 0;
 			}
