--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $desktop-breakpoint: 1280px;
 	--primaryLightGreen: #8fd1c2;
 	--primaryLightBlue: #455d7a;
 	--bg-color: #ffffff;
-	--header-color: #f4f6fb;
+	--header-color: #f3f6fb;
 	--btn-color: #eaeaea;
 	--btn-text: #fff;
 	--btn-bg: #455d7a;
@@ -22,7 +22,8 @@ $desktop-breakpoint: 1280px;
 	--project-bg: rgba(255, 255, 255, 0);
 	--navbar-color: #eaeaea;
 	--icon-color: #455d7a;
-	--ico-bg: #d4d4d4;
+	--ico-hover: #dbdee3;
+	--ico-bg: #e1e4e9;
 	--bubbles-light-color: #9db0ce;
 	--bubbles-dark-color: #455d7a;
 	--highlight-color: #8fd1c2;
@@ -47,7 +48,8 @@ $desktop-breakpoint: 1280px;
 	--project-bg: rgba(255, 255, 255, 1);
 	--navbar-color: #ffffff;
 	--icon-color: #8fd1c2;
-	--ico-bg: color(display-p3 0.224 0.224 0.224);
+	--ico-bg: #444447;
+	--ico-hover: #525254;
 	--bubbles-light-color: #455d7a;
 	--bubbles-dark-color: #8fd1c2;
 	--highlight-color: #feffdf;
