--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -2,10 +2,11 @@
 @use '../../styles/variables' as *;
 
 .contact-form {
-	max-width: 600px;
+	width: 100%;
 	margin-top: 1.5rem;
-	@include desktop-sm {
+	@include tablet {
 		margin-bottom: 10rem;
+		max-width: 600px;
 	}
 
 	&__title {
