--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -13,10 +13,6 @@
 		@include tablet {
 			font-size: 3rem;
 		}
-
-		@media (orientation: landscape) {
-			font-size: 2.5rem;
-		}
 	}
 
 	&__body {
@@ -24,15 +20,14 @@
 		font-size: $fs-120;
 		font-weight: $fw-300;
 
-		@include tablet {
-			@media (orientation: landscape) {
-				font-size: 1.2rem;
-			}
-		}
-
 		@include desktop-sm {
-			width: 90%;
-			font-size: 1.3rem;
+			width: 60%;
 		}
+	}
+}
+
+@media (orientation: landscape) {
+	.title__head {
+		font-size: 2.5rem;
 	}
 }
