--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $desktop-breakpoint: 1280px;
 	--primaryLightBlue: #455d7a;
 	--bg-color: #ffffff;
 	--header-color: #f3f6fb;
+	--project-color: #f8f8f8;
 	--btn-color: #eaeaea;
 	--btn-text: #fff;
 	--btn-bg: #455d7a;
@@ -37,6 +38,7 @@ $desktop-breakpoint: 1280px;
 	--primaryLightBlue: #455d7a;
 	--bg-color: #334051;
 	--header-color: #1a2b3a;
+	--project-color: #1a2b3a;
 	--btn-color: #eaeaea;
 	--btn-text: rgba(51, 64, 81);
 	--btn-bg: #8fd1c2;
