--- a/src/components/Navegation/Navigation.scss
+++ b/src/components/Navegation/Navigation.scss
@@ -13,7 +13,7 @@
 	}
 
 	@include desktop {
-		width: 80rem;
+		width: 70rem;
 		margin: 0 auto;
 	}
 }
@@ -33,10 +33,14 @@
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
+
+	@include tablet {
+		gap: 2rem;
+	}
 }
 
 .nav-branding {
-	font-family: 'Titillium Web';
+	font-family: 'Titillium Web', sans-serif;
 	font-size: 2.5rem;
 	color: var(--primary);
 	letter-spacing: 0.1rem;
