added a condition that checks the with of the browser window that return two break line in the paragraph of my bio

--- a/src/components/FooterContent/FooterContent.scss
+++ b/src/components/FooterContent/FooterContent.scss
@@ -55,6 +55,10 @@
 			flex-direction: row;
 			align-items: center;
 		}
+
+		p {
+			font-size: clamp(0.8rem, 2vw, 1.05rem);
+		}
 	}
 
 	&__social {
