--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -52,6 +52,10 @@
 		font-size: $fs-120;
 		font-weight: 300;
 		margin-top: 1rem;
-		margin-bottom: 1.5rem;
+		margin-bottom: 0;
+
+		@include tablet {
+			margin-bottom: 1.5rem;
+		}
 	}
 }
