--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,7 +3,7 @@
 
 .about {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	gap: 3rem;
 	margin: 10rem 0;
 
@@ -11,51 +11,30 @@
 		flex-direction: row;
 		height: 40vh;
 		margin: 10rem 0 20rem;
+		justify-content: flex-end;
 	}
 
-	& > div {
-		display: flex;
-		align-items: flex-start;
-		flex-direction: column;
-	}
-
-	& > div:first-child {
-		flex: 1;
-		order: 2;
+	&-container {
+		width: 100%;
 
 		@include tablet {
-			order: 1;
+			width: 70%;
 		}
-	}
 
-	& > div:last-child {
-		flex-basis: 65%;
-		order: 1;
-
-		@include tablet {
-			order: 2;
+		&__title {
+			font-family: $ff-web;
+			font-size: $fs-250;
 		}
-	}
 
-	&__intro {
-		font-weight: 300;
-		margin: 5rem 0 1rem;
-		font-size: 1.5rem;
-	}
+		&__text {
+			font-size: $fs-120;
+			font-weight: 300;
+			margin-top: 1rem;
+			margin-bottom: 1rem;
 
-	&__title {
-		font-family: $ff-web;
-		font-size: $fs-250;
-	}
-
-	&__text {
-		font-size: $fs-120;
-		font-weight: 300;
-		margin-top: 1rem;
-		margin-bottom: 0;
-
-		@include tablet {
-			margin-bottom: 1.5rem;
+			@include tablet {
+				margin-bottom: 1.5rem;
+			}
 		}
 	}
 }
