--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -39,14 +39,17 @@
 			font-family: 'Titillium Web', sans-serif;
 			margin-bottom: 1rem;
 			line-height: 0.9;
-			font-size: clamp(1.3rem, 9vw, 5rem);
+			font-size: clamp(3.3rem, 9vw, 5rem);
+			@include desktop-sm {
+				font-size: clamp(1.3rem, 9vw, 5rem);
+			}
 
 			span {
 				color: var(--primaryLightGreen);
 				font-size: clamp(1.7rem, 8vw, 5rem);
 
 				@include desktop-sm {
-					font-size: 4rem;
+					font-size: 3rem;
 				}
 			}
 
