--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -39,18 +39,15 @@
 			font-family: 'Titillium Web', sans-serif;
 			margin-bottom: 1rem;
 			line-height: 0.9;
-			font-size: clamp(3.3rem, 9vw, 5rem);
+			font-size: clamp(2.2rem, 9vw, 4rem);
+			color: var(--primary);
+
 			@include desktop-sm {
 				font-size: clamp(1.3rem, 9vw, 5rem);
 			}
 
 			span {
-				color: var(--primaryLightGreen);
-				font-size: clamp(1.7rem, 8vw, 5rem);
-
-				@include desktop-sm {
-					font-size: 3rem;
-				}
+				color: var(--btn-bg);
 			}
 
 			@include desktop-sm {
@@ -61,16 +58,16 @@
 
 		&--text {
 			font-family: 'Josefin Sans', sans-serif;
-			font-size: $fs-150;
+			font-size: $fs-120;
 			font-weight: $fw-300;
-			margin-top: 4rem;
+			margin-top: 1rem;
 			display: block;
 
 			@include desktop-sm {
 				text-align: left;
-				font-size: 1.7rem;
+				font-size: 1.4rem;
 				padding: 0;
-				margin-top: 2rem;
+				margin-top: 1rem;
 			}
 		}
 	}
@@ -86,11 +83,16 @@
 		}
 
 		&--img {
-			width: 300px;
-			height: 300px;
+			width: 250px;
+			height: 250px;
 			border-radius: 50%;
 			overflow: hidden;
 			transition: all ease-in 0.5s;
+
+			@include desktop {
+				width: 300px;
+				height: 300px;
+			}
 
 			img {
 				max-width: 100%;
