install slider from prime react and also change some text in the skills section, also add icons and delete some extra wordy

--- a/src/components/ProjectSection/ProjectSection.scss
+++ b/src/components/ProjectSection/ProjectSection.scss
@@ -40,3 +40,37 @@
 		}
 	}
 }
+
+.carousel .control-arrow:hover {
+	background-color: var(--primaryLightBlue) !important;
+}
+
+.carousel .slide img {
+	max-width: 100%;
+	height: auto;
+}
+
+.carousel .control-dots {
+	z-index: 0 !important;
+}
+
+.carousel .control-dots .dot {
+	box-shadow: none !important;
+	background-color: var(--primaryLightBlue) !important;
+}
+
+.carousel .control-arrow,
+.carousel.carousel-slider .control-arrow {
+	z-index: 0 !important;
+}
+
+.carousel .control-prev.control-arrow,
+.carousel .control-next.control-arrow {
+	opacity: 1;
+	visibility: visible;
+}
+
+.carousel .control-prev.control-arrow:before,
+.carousel .control-next.control-arrow:before {
+	font-size: 26px;
+}
