--- a/src/components/MainProject/MainProject.scss
+++ b/src/components/MainProject/MainProject.scss
@@ -6,8 +6,8 @@
 	padding: 1rem;
 	background: var(--project-color);
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
-	// border-radius: 10px;
-	// background: rgb(243, 244, 246);
+	border-radius: 10px;
+	background: rgb(243, 244, 246);
 	gap: 2rem;
 
 	@include tablet {
