--- a/src/components/MainProject/MainProject.scss
+++ b/src/components/MainProject/MainProject.scss
@@ -36,9 +36,12 @@
 			margin-top: 0;
 			flex: 2;
 		}
+		&--sub {
+			color: var(--highlight-color-text);
+		}
 
 		&--icon {
-			color: var(--primary);
+			color: var(--highlight-color-text);
 
 			&:hover {
 				color: var(--primaryLightGreen);
@@ -53,6 +56,7 @@
 		&--title {
 			margin-top: 0.5rem;
 			font-size: 1.3rem;
+			color: var(--highlight-color-text);
 
 			@include tablet {
 				font-size: 1.3rem;
@@ -64,6 +68,7 @@
 			line-height: 1.3;
 			margin-bottom: 1rem;
 			font-size: 1rem;
+			color: var(--highlight-color-text);
 		}
 	}
 }
